frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-frontend
  namespace: website
spec:
  selector:
    app: website-frontend
  ports:
    - port: 80
      targetPort: 80
