frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - marafis.com
        - www.marafis.com
      secretName: website-tls

  rules:
    - host: marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-frontend
                port:
                  number: 80
    - host: www.marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-frontend
                port:
                  number: 80
